# air-assistant

./: .env.example  .gitignore  README.md  main.py  mcp_handler.py  pyproject.toml  requirements.txt  servers_config.example.json  setup.bat  setup.sh
omniparser/omnitool/client/: .env.example  loop.py  mcp_server.py
omniparser/omnitool/client/agent/: models.py  vlm_agent.py
omniparser/omnitool/client/agent/llm_utils/: geminiclient.py  oaiclient.py  omniparserclient.py
omniparser/omnitool/client/executor/: anthropic_executor.py
omniparser/omnitool/client/tools/: audio.py  computer.py
omniparser/omnitool/server/: omniparserserver.py
virtual_mouse/: virtual_mouse.py
